--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
   "dependencies": {
     "semver": "^5.3.0"
   },
+  "devDependencies": {
+    "tape": "^4.6.0"
+  },
   "files": [
     "index.js"
   ],
   "license": "MIT",
-  "repository": "kemitchell/compare-flat-package-tree-records.js"
+  "repository": "kemitchell/compare-flat-package-tree-records.js",
+  "scripts": {
+    "test": "node test.js"
+  }
 }
