--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "semver": "^5.3.0"
   },
   "devDependencies": {
+    "standard": "^7.1.2",
     "tape": "^4.6.0"
   },
   "files": [
@@ -15,6 +16,7 @@
   "license": "MIT",
   "repository": "kemitchell/compare-flat-package-tree-records.js",
   "scripts": {
+    "lint": "standard",
     "test": "node test.js"
   }
 }
