--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "semver": "^5.3.0"
   },
   "devDependencies": {
+    "istanbul": "^0.4.4",
     "standard": "^7.1.2",
     "tape": "^4.6.0"
   },
@@ -16,6 +17,8 @@
   "license": "MIT",
   "repository": "kemitchell/compare-flat-package-tree-records.js",
   "scripts": {
+    "coverage": "istanbul check-coverage --branches 100 --functions 100 --statements 100 --lines 100",
+    "precoverage": "istanbul cover test.js",
     "lint": "standard",
     "test": "node test.js"
   }
